@@ -7,7 +7,7 @@
  */
 class CollectionsTemplateGetListProcessor extends modObjectGetListProcessor {
     public $classKey = 'CollectionTemplate';
-    public $languageTopics = array('collections:default');
+    public $languageTopics = array('collections:default', 'template');
     public $defaultSortField = 'name';
     public $defaultSortDirection = 'ASC';
     public $objectType = 'collections.template';
@@ -22,6 +22,25 @@ class CollectionsTemplateGetListProcessor extends modObjectGetListProcessor {
             );
         }
         return $list;
+    }
+
+    public function prepareRow(xPDOObject $object) {
+        $template = $object->toArray();
+        
+        $c = $this->modx->newQuery('CollectionResourceTemplate');
+        $c->leftJoin('modTemplate', 'ResourceTemplate');
+        $c->where(array(
+            'collection_template' => $template['id']
+        ));
+        $c->select(array(
+            'test' => 'IF(resource_template = 0, \'' . $this->modx->lexicon('template_empty') . '\', ResourceTemplate.templatename)'
+        ));
+        $c->prepare();
+        $c->stmt->execute();
+        
+        $template['default_for_templates'] = $c->stmt->fetchAll(PDO::FETCH_COLUMN, 0);
+        
+        return $template;
     }
 }
 return 'CollectionsTemplateGetListProcessor';
